# EticaIA

./: .gitignore  README.md  hello.py  mongodb_connection.py  pyproject.toml  requirements.txt  run_scraper.bat  scraper.py
api/: database.py  main.py  models.py
api/routes/: articles.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: ArticleCard.jsx  Navbar.jsx
client/src/pages/: ArticleDetail.jsx  Home.jsx
client/src/services/: api.js
server/: .env.example  .gitignore  pyproject.toml  requirements.txt  scrape_and_save.py  scraper.py
server/api/: database.py  main.py  models.py
server/api/routes/: articles.py
server/api/utils/: serializers.py
server/tests/: run_tests_separately.py  test_api.py  test_db_save.py  test_scraper.py
